fixing tile alignment

--- a/css/style.css
+++ b/css/style.css
@@ -136,7 +136,7 @@ html,body {
 }
 
 .c2 {
-	margin-left: 21vw;
+	margin-left: 22vw;
 }
 
 .c3 {
@@ -152,15 +152,15 @@ html,body {
 }
 
 .r2 {
-	margin-top: 20vw;
+	margin-top: 21vw;
 }
 
 .r3 {
-	margin-top: 42vw;
+	margin-top: 43vw;
 }
 
 .r4 {
-	margin-top: 63vw;
+	margin-top: 64vw;
 }
 
 /* -- colors --- */
